// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopoverFooter is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopoverFooter testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPopoverFooter props paddingSize l is rendered 1`] = `
<div
  class="euiPopoverFooter euiPopoverFooter--paddingLarge"
/>
`;

exports[`EuiPopoverFooter props paddingSize m is rendered 1`] = `
<div
  class="euiPopoverFooter euiPopoverFooter--paddingMedium"
/>
`;

exports[`EuiPopoverFooter props paddingSize none is rendered 1`] = `
<div
  class="euiPopoverFooter euiPopoverFooter--paddingNone"
/>
`;

exports[`EuiPopoverFooter props paddingSize s is rendered 1`] = `
<div
  class="euiPopoverFooter euiPopoverFooter--paddingSmall"
/>
`;
